# obligatorio1-sistemasMultiagente-Sanes-Guerra

./: .gitignore  Notebook_Entrega_Sanes-Guerra.ipynb  README.md  obligatoriosanesguerra.ipynb  pyproject.toml  utils.py
agents/: fictitiousplay.py  iql.py  jal.py  regretmatching.py
games/: blotto.py  blotto_original.py  foraging.py
