[project]
name = "simultaneous-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=2.4.3",
    "pandas>=2.0.0",
    "pettingzoo>=1.25.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
    "lbforaging>=0.4.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["base", "games", "agents"]
